[tool.poetry]
name = "fava-gtk"
version = "0.1.0"
description = ""
authors = ["johannesjh <johannesjh@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fava = "^1.18"
PyGObject = "^3.38.0"

[tool.poetry.extras]
smart-importer = ["smart-importer"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.9.2"
pyclean = "^2.0.0"

[tool.poetry.scripts]
fava-gtk = "fava_gtk.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
