[metadata]
name = fava-gtk
version = 0.1.4
license = GPL-2.0
description = Allows to use the Fava and Beancount double-entry bookkeeping software packages as a desktop application.

[options]
packages=find:
python_requires = >= 3.8

[options.packages.find]
exclude=tests

[options.entry_points]
console_scripts =
    fava-gtk = fava_gtk.main:main
