[metadata]
name = fava-gtk
version = 0.1.5-dev
license = GPL-2.0
description = Allows to use the Fava and Beancount double-entry bookkeeping software packages as a desktop application.
url = https://github.com/johannesjh/fava-gtk/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Environment :: X11 Applications :: GTK
    Environment :: X11 Applications :: Gnome
    Topic :: Office/Business :: Financial :: Accounting

[options]
packages=find:
python_requires = >= 3.8

[options.packages.find]
exclude=tests

[options.entry_points]
console_scripts =
    fava-gtk = fava_gtk.main:main
